--- a/nuoy4_springcode/nuoy4_1spring_ioc/pom.xml
+++ b/nuoy4_springcode/nuoy4_1spring_ioc/pom.xml
@@ -3,19 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>javatrace</artifactId>
+        <artifactId>nuoy4_springcode</artifactId>
         <groupId>com.nnstn.javatrace</groupId>
         <version>1.5.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>nuoy1_0datatrace</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>nuoy1_1jdbc</module>
-        <module>nuoy1_2mybatis</module>
-        <module>nuoy1_3mybatis_demo</module>
-        <module>nuoy1_4mybatis_boot</module>
-    </modules>
+    <artifactId>nuoy4_1spring_ioc</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 </project>
